fixed the issue with text wrapping in taskitems

--- a/client/src/features/categories/categories.css
+++ b/client/src/features/categories/categories.css
@@ -24,7 +24,6 @@
 }
 
 .categoriesCategoryMainContainer {
-    max-width: 90%;
     flex: 0 0 320px;
     height: 99%;
     display: flex;
