--- a/client/src/features/tasks/taskDetail.css
+++ b/client/src/features/tasks/taskDetail.css
@@ -10,7 +10,7 @@
 
 .taskDetailMainContainer {
     width: 40%;
-    height: 550px;
+    min-height: 550px;
     background-color: white;
     position: absolute;
     top: 120px;
@@ -35,12 +35,13 @@
 }
 
 .taskDetailHeaderContainer {
-    height: 40px;
+    min-height: 40px;
     margin-top: 10px;
     width: 90%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    cursor: pointer;
 }
 
 .taskDetailEditNameInput {
