--- a/client/src/features/tasks/taskItem.css
+++ b/client/src/features/tasks/taskItem.css
@@ -43,14 +43,18 @@
     color: white;
 }
 
-/* fix text break in this element */
 .taskItemName {
     font-weight: 600;
     font-size: 19px;
+    word-wrap: break-word;
+    white-space: normal;
+    overflow-wrap: break-word;
+    padding-top: 10px;
 }
 
 .taskItemSubtasksStatus {
     color: #828fa3;
     font-size: 15px;
-    margin-top: 10px;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
